Этап 2. Этап 2. Основной сервис